<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_options_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.assignment2.medipack.mineseek.OptionsMenu">

    <TextView
        android:text="@string/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/options_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:text="@string/board_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/options_board_size"
        android:textSize="18sp" />

    <TextView
        android:text="@string/number_of_mines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/options_board_size"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:id="@+id/options_num_mines"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/boardSmall"
        android:id="@+id/boardSize"
        android:orientation='horizontal'
        android:layout_above="@+id/options_num_mines"
        android:layout_toRightOf="@+id/options_title"
        android:layout_toEndOf="@+id/options_title">

        <RadioButton
            android:text="@string/_4_x_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boardSmall"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/_5_x_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boardMedium"
            android:layout_marginLeft="49dp"
            android:layout_marginStart="49dp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/_6_x_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/boardLarge"
            android:layout_marginLeft="48dp"
            android:layout_marginStart="48dp"
            android:layout_weight="1" />
    </RadioGroup>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:scrollIndicators="right"
        android:layout_alignBottom="@+id/options_num_mines"
        android:layout_alignLeft="@+id/boardSize"
        android:layout_alignStart="@+id/boardSize" />

    <Button
        android:text="@string/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options_confirm"
        android:layout_above="@+id/options_cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
