<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mine_seek_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/rpgtile"
    tools:context="com.assignment2.medipack.mineseek.GameActivity">

    <TextView
        android:text="@string/scans_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numScans"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/mines_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gameBoard"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/minesFound" />

    <TextView
        android:text="@string/game_d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/gameNum"
        android:layout_alignParentTop="true" />

    <TableLayout
        android:id="@+id/gameBoard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/numScans"
        android:layout_below="@+id/gameNum">

    </TableLayout>
</RelativeLayout>
